# pups

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: collection_parsers.rs  combinators.rs  input.rs  lib.rs  macros.rs  mode_result.rs  modes.rs  parsers.rs
core/src/collection_parsers/: many.rs  separated.rs
core/src/parsers/: boxed.rs  choice.rs  emitting.rs  end.rs  first.rs  first_match.rs  iterated.rs  mapped.rs  mapped_error.rs  mapped_messages.rs  mappers.rs  nothing.rs  optional.rs  recoverable.rs  sequenced.rs  traced.rs
core/tests/: master.rs
src/: combinators.rs  input.rs  input_stream.rs  lib.rs  parser.rs
src/combinators/: choice.rs  delimited.rs  map.rs  map_error.rs  preceded.rs  sequence.rs  terminated.rs
text/: Cargo.toml
text/src/: character.rs  lib.rs  parsers.rs  text.rs  text_input.rs
text/src/parsers/: horizontal_space.rs  keyword.rs  newline.rs  number.rs  token.rs  unicode_identifier.rs  whitespace.rs
