# Copyright Rob Gage 2025

[package]
name = "pups_text"
version = "0.0.0"
license = "MIT"
description = "Text-specific utilities for the `pups` library"
readme = "../README.md"
repository = "https://github.com/rob-gage/pups"
edition = "2024"

[dependencies]
pups_core = { version = "0.0.2", path = "../core" }
unicode-ident = "1.0.19"
