# Copyright Rob Gage 2025

[package]
name = "pups_text"
version = "0.1.11"
license = "MIT"
description = "Pretty Understandable Parsers"
readme = "../README.md"
repository = "https://github.com/rob-gage/pups"
edition = "2024"

[dependencies]
pups_core = { version = "0.1.11", path = "../core" }
unicode-ident = "1.0.19"
